--- a/DevilDaggersAssetEditor.Wpf/Gui/Windows/ModManager.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/Windows/ModManager.xaml
@@ -8,7 +8,7 @@
         Title="Mod manager" WindowStartupLocation="CenterScreen" Closed="Window_Closed">
 	<ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
 		<StackPanel MinHeight="730" MinWidth="1366" Background="{StaticResource Gray3}">
-			<TabControl>
+			<TabControl Name="TabControl">
 				<TabItem Header="Download mods">
 					<usercontrols:DownloadModsControl x:Name="DownloadModsControl" />
 				</TabItem>
