--- a/DevilDaggersAssetEditor.Wpf/Gui/UserControls/AssetRowControl.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/UserControls/AssetRowControl.xaml
@@ -21,26 +21,22 @@
 			<RowDefinition Height="*" Name="RowDefinitionFragmentShader" />
 		</Grid.RowDefinitions>
 
-		<TextBlock Grid.RowSpan="2" Style="{StaticResource AssetTextBlock}" Grid.Column="0" Name="TextBlockAssetName" />
-		<TextBlock Grid.Column="1" Grid.RowSpan="2" HorizontalAlignment="Left" Style="{StaticResource AssetTextBlock}" Name="TextBlockProhibited" />
-		<TextBlock Grid.Column="2" Grid.RowSpan="2" HorizontalAlignment="Left" Style="{StaticResource AssetTextBlock}" Name="TextBlockTags" />
-		<TextBlock Grid.Column="3" Grid.RowSpan="2" HorizontalAlignment="Left" Style="{StaticResource AssetTextBlock}" Name="TextBlockDescription" />
+		<TextBlock Grid.RowSpan="2" Style="{StaticResource AssetTextBlock}" Name="TextBlockAssetName" />
+		<TextBlock Grid.Column="1" Grid.RowSpan="2" Style="{StaticResource AssetTextBlock}" Name="TextBlockProhibited" />
+		<TextBlock Grid.Column="2" Grid.RowSpan="2" Style="{StaticResource AssetTextBlock}" Name="TextBlockTags" />
+		<TextBlock Grid.Column="3" Grid.RowSpan="2" Style="{StaticResource AssetTextBlock}" Name="TextBlockDescription" />
 		<Grid Grid.Column="4">
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition Width="0" Name="ColumnDefinitionLoudness" />
 				<ColumnDefinition Width="*" />
 			</Grid.ColumnDefinitions>
 			<TextBox Name="TextBoxLoudness" Visibility="Collapsed" TextChanged="TextBoxLoudness_TextChanged" />
-			<Grid Grid.Column="1" Name="GridPath" HorizontalAlignment="Left">
-				<TextBlock Style="{StaticResource AssetTextBlock}" Name="TextBlockEditorPath" HorizontalAlignment="Right" />
-			</Grid>
+			<TextBlock Grid.Column="1" HorizontalAlignment="Left" Style="{StaticResource AssetTextBlock}" Name="TextBlockEditorPath" />
 		</Grid>
 		<Button Grid.Column="5" Click="ButtonRemovePath_Click">Reset</Button>
 		<Button Grid.Column="6" Click="ButtonBrowsePath_Click">Browse</Button>
 
-		<Grid Grid.Column="4" Grid.Row="1" Name="GridPathFragment" HorizontalAlignment="Left">
-			<TextBlock Style="{StaticResource AssetTextBlock}" Name="TextBlockEditorPathFragmentShader" Visibility="Collapsed" HorizontalAlignment="Right" />
-		</Grid>
+		<TextBlock Grid.Column="4" Grid.Row="1" Style="{StaticResource AssetTextBlock}" Name="TextBlockEditorPathFragmentShader" Visibility="Collapsed" HorizontalAlignment="Right" />
 		<Button Grid.Column="5" Grid.Row="1" Click="ButtonRemovePathFragmentShader_Click" Name="RemovePathButtonFragmentShader" Visibility="Collapsed">Reset</Button>
 		<Button Grid.Column="6" Grid.Row="1" Click="ButtonBrowsePathFragmentShader_Click" Name="BrowseButtonFragmentShader" Visibility="Collapsed">Browse</Button>
 	</Grid>
