--- a/DevilDaggersAssetEditor.Wpf/Gui/UserControls/AssetRowControl.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/UserControls/AssetRowControl.xaml
@@ -12,6 +12,7 @@
 			<ColumnDefinition Width="1*" />
 			<ColumnDefinition Width="3*" />
 			<ColumnDefinition Width="5*" />
+			<ColumnDefinition Width="0*" Name="ColumnDefinitionLoudness" />
 			<ColumnDefinition Width="6*" />
 			<ColumnDefinition Width="*" />
 			<ColumnDefinition Width="*" />
@@ -25,19 +26,13 @@
 		<TextBlock Grid.Column="1" Grid.RowSpan="2" Style="{StaticResource AssetTextBlock}" Name="TextBlockProhibited" />
 		<TextBlock Grid.Column="2" Grid.RowSpan="2" Style="{StaticResource AssetTextBlock}" Name="TextBlockTags" />
 		<TextBlock Grid.Column="3" Grid.RowSpan="2" Style="{StaticResource AssetTextBlock}" Name="TextBlockDescription" />
-		<Grid Grid.Column="4">
-			<Grid.ColumnDefinitions>
-				<ColumnDefinition Width="0" Name="ColumnDefinitionLoudness" />
-				<ColumnDefinition Width="*" />
-			</Grid.ColumnDefinitions>
-			<TextBox Name="TextBoxLoudness" Visibility="Collapsed" TextChanged="TextBoxLoudness_TextChanged" />
-			<TextBlock Grid.Column="1" HorizontalAlignment="Left" Style="{StaticResource AssetTextBlock}" Name="TextBlockEditorPath" />
-		</Grid>
-		<Button Grid.Column="5" Click="ButtonRemovePath_Click">Reset</Button>
-		<Button Grid.Column="6" Click="ButtonBrowsePath_Click">Browse</Button>
+		<TextBox Grid.Column="4" Name="TextBoxLoudness" HorizontalContentAlignment="Right" Visibility="Collapsed" TextChanged="TextBoxLoudness_TextChanged" />
+		<TextBlock Grid.Column="5" Style="{StaticResource AssetTextBlock}" Name="TextBlockEditorPath" />
+		<Button Grid.Column="6" Click="ButtonRemovePath_Click">Reset</Button>
+		<Button Grid.Column="7" Click="ButtonBrowsePath_Click">Browse</Button>
 
-		<TextBlock Grid.Column="4" Grid.Row="1" Style="{StaticResource AssetTextBlock}" Name="TextBlockEditorPathFragmentShader" Visibility="Collapsed" HorizontalAlignment="Right" />
-		<Button Grid.Column="5" Grid.Row="1" Click="ButtonRemovePathFragmentShader_Click" Name="RemovePathButtonFragmentShader" Visibility="Collapsed">Reset</Button>
-		<Button Grid.Column="6" Grid.Row="1" Click="ButtonBrowsePathFragmentShader_Click" Name="BrowseButtonFragmentShader" Visibility="Collapsed">Browse</Button>
+		<TextBlock Grid.Column="5" Grid.Row="1" Style="{StaticResource AssetTextBlock}" Name="TextBlockEditorPathFragmentShader" Visibility="Collapsed" />
+		<Button Grid.Column="6" Grid.Row="1" Click="ButtonRemovePathFragmentShader_Click" Name="RemovePathButtonFragmentShader" Visibility="Collapsed">Reset</Button>
+		<Button Grid.Column="7" Grid.Row="1" Click="ButtonBrowsePathFragmentShader_Click" Name="BrowseButtonFragmentShader" Visibility="Collapsed">Browse</Button>
 	</Grid>
 </UserControl>
