--- a/DevilDaggersAssetEditor.Wpf/Gui/UserControls/ManageModsControl.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/UserControls/ManageModsControl.xaml
@@ -4,7 +4,7 @@
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 			 mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="736" d:DesignWidth="1024">
 	<Grid MinWidth="1024">
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="2*" />
@@ -17,28 +17,28 @@
 		</Grid.RowDefinitions>
 
 		<StackPanel>
-			<Label Style="{StaticResource BoldLabel}" Background="{StaticResource Gray28}" Margin="0,10,0,0" Name="ModsDirectoryLabel"/>
+			<TextBlock FontWeight="Bold" Foreground="{StaticResource Text}" Background="{StaticResource Gray28}" Margin="0,10,0,0" Name="ModsDirectoryLabel"/>
 			<TextBlock Foreground="{StaticResource SuccessText}">Active mod files</TextBlock>
 			<TextBlock Foreground="{StaticResource Text}">Mod files</TextBlock>
 			<TextBlock Foreground="{StaticResource Gray6}">Other files</TextBlock>
 		</StackPanel>
 		<StackPanel Grid.Column="1">
-			<Label Style="{StaticResource BoldLabel}" Background="{StaticResource Gray28}" Margin="0,10,0,0">Binary contents</Label>
+			<TextBlock FontWeight="Bold" Foreground="{StaticResource Text}" Background="{StaticResource Gray28}" Margin="0,10,0,0">Binary contents</TextBlock>
 			<TextBlock Foreground="{StaticResource ErrorText}">Prohibited assets</TextBlock>
 			<TextBlock Foreground="{StaticResource Text}">Active assets (in this binary)</TextBlock>
 			<TextBlock Foreground="{StaticResource Gray6}">Disabled assets</TextBlock>
 		</StackPanel>
 		<StackPanel Grid.Column="2">
-			<Label Style="{StaticResource BoldLabel}" Background="{StaticResource Gray28}" Margin="0,10,0,0">Effective assets</Label>
+			<TextBlock FontWeight="Bold" Foreground="{StaticResource Text}" Background="{StaticResource Gray28}" Margin="0,10,0,0">Effective assets</TextBlock>
 		</StackPanel>
 
 		<ListView Grid.Row="1" Name="ModFilesListView" BorderThickness="0" HorizontalContentAlignment="Stretch" SelectionMode="Single" SelectionChanged="ModFilesListView_SelectionChanged" ScrollViewer.VerticalScrollBarVisibility="Visible" ItemContainerStyle="{StaticResource ListViewItemContainerStyle}" Background="{StaticResource Gray3}" />
 
-		<ScrollViewer Grid.Column="1" Grid.Row="1" MaxHeight="640">
+		<ScrollViewer Name="ChunkListScrollViewer" Grid.Column="1" Grid.Row="1" MaxHeight="640">
 			<StackPanel Name="ChunkListView" Background="{StaticResource Gray28}" />
 		</ScrollViewer>
 
-		<ScrollViewer Grid.Column="2" Grid.Row="1" MaxHeight="640">
+		<ScrollViewer Name="EffectiveChunkListScrollViewer" Grid.Column="2" Grid.Row="1" MaxHeight="640">
 			<StackPanel Name="EffectiveChunkListView" Background="{StaticResource Gray3}" />
 		</ScrollViewer>
 	</Grid>
