--- a/DevilDaggersAssetEditor.Wpf/Gui/UserControls/ManageModsControl.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/UserControls/ManageModsControl.xaml
@@ -19,13 +19,13 @@
 		<StackPanel>
 			<TextBlock FontWeight="Bold" Foreground="{StaticResource Text}" Background="{StaticResource Gray28}" Margin="0,10,0,0" Name="ModsDirectoryLabel"/>
 			<TextBlock Foreground="{StaticResource SuccessText}">Active mod files</TextBlock>
-			<TextBlock Foreground="{StaticResource Text}">Mod files</TextBlock>
+			<TextBlock Foreground="{StaticResource Text}">Disabled mod files</TextBlock>
 			<TextBlock Foreground="{StaticResource Gray6}">Other files</TextBlock>
 		</StackPanel>
 		<StackPanel Grid.Column="1">
 			<TextBlock FontWeight="Bold" Foreground="{StaticResource Text}" Background="{StaticResource Gray28}" Margin="0,10,0,0">Binary contents</TextBlock>
-			<TextBlock Foreground="{StaticResource ErrorText}">Prohibited assets</TextBlock>
-			<TextBlock Foreground="{StaticResource Text}">Active assets (in this binary)</TextBlock>
+			<TextBlock Foreground="{StaticResource ErrorText}">Active prohibited assets</TextBlock>
+			<TextBlock Foreground="{StaticResource Text}">Active allowed assets</TextBlock>
 			<TextBlock Foreground="{StaticResource Gray6}">Disabled assets</TextBlock>
 		</StackPanel>
 		<StackPanel Grid.Column="2">
