--- a/DevilDaggersAssetEditor.Wpf/Gui/UserControls/ModPreviewControl.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/UserControls/ModPreviewControl.xaml
@@ -9,7 +9,7 @@
 		<Label FontWeight="Bold" Margin="0,10,0,0" Background="{StaticResource Gray28}">Mod preview</Label>
 		<StackPanel ClipToBounds="True" Background="{StaticResource Gray38}">
 			<Label FontWeight="Bold" Name="PreviewName">No mod selected</Label>
-			<Button Name="DownloadModButton" Click="DownloadModButton_Click" HorizontalContentAlignment="Left" IsEnabled="False" Width="116" HorizontalAlignment="Left">Download and install</Button>
+			<Button Name="DownloadModButton" Click="DownloadModButton_Click" HorizontalContentAlignment="Center" IsEnabled="False" Width="120" HorizontalAlignment="Left">Download and install</Button>
 		</StackPanel>
 
 		<StackPanel ClipToBounds="True" Name="BinariesContainer" Visibility="Collapsed">
