--- a/DevilDaggersAssetEditor.Wpf/Gui/Themes/DevilDaggersAssetEditor.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/Themes/DevilDaggersAssetEditor.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+					xmlns:toolkit="http://schemas.xceed.com/wpf/xaml/toolkit"
 					xmlns:windows="clr-namespace:DevilDaggersAssetEditor.Wpf.Gui.Windows">
 	<Style TargetType="{x:Type windows:AboutWindow}" BasedOn="{StaticResource {x:Type Window}}" />
 	<Style TargetType="{x:Type windows:BinaryFileAnalyzerWindow}" BasedOn="{StaticResource {x:Type Window}}" />
@@ -139,5 +140,22 @@
 			<Setter Property="HorizontalAlignment" Value="Center" />
 			<Setter Property="VerticalAlignment" Value="Center" />
 		</Style.Setters>
+	</Style>
+
+	<Style x:Key="RichTextBoxAsTextBlock" TargetType="toolkit:RichTextBox">
+		<Setter Property="Foreground" Value="{StaticResource Text}" />
+		<Setter Property="Background" Value="Transparent" />
+		<Setter Property="CaretBrush" Value="White" />
+
+		<Setter Property="IsReadOnly" Value="True" />
+		<Setter Property="BorderThickness" Value="0" />
+		<Setter Property="BorderBrush" Value="Transparent" />
+		<Setter Property="FontWeight" Value="Normal" />
+
+		<Setter Property="TextFormatter">
+			<Setter.Value>
+				<toolkit:XamlFormatter />
+			</Setter.Value>
+		</Setter>
 	</Style>
 </ResourceDictionary>
