--- a/DevilDaggersAssetEditor.Wpf/Gui/UserControls/ModPreviewControl.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/UserControls/ModPreviewControl.xaml
@@ -3,8 +3,9 @@
 			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-			 mc:Ignorable="d" 
-             d:DesignHeight="512" d:DesignWidth="272">
+			 xmlns:toolkit="http://schemas.xceed.com/wpf/xaml/toolkit"
+			 mc:Ignorable="d"
+			 d:DesignHeight="512" d:DesignWidth="272">
 	<StackPanel ClipToBounds="True" Width="264">
 		<Label FontWeight="Bold" Margin="0,10,0,0" Background="{StaticResource Gray28}">Mod preview</Label>
 		<StackPanel ClipToBounds="True" Background="{StaticResource Gray38}">
@@ -22,7 +23,7 @@
 		<StackPanel ClipToBounds="True" Name="DescriptionContainer" Visibility="Collapsed">
 			<Label FontWeight="Bold" Margin="0,10,0,0" Background="{StaticResource Gray28}">Description</Label>
 			<ScrollViewer MaxHeight="96" Margin="2,0,0,0" ClipToBounds="True" Name="ScrollViewerDescription" Background="{StaticResource Gray38}">
-				<TextBlock HorizontalAlignment="Left" Name="PreviewDescription" />
+				<toolkit:RichTextBox HorizontalAlignment="Left" Name="PreviewDescription" Style="{StaticResource RichTextBoxAsTextBlock}" />
 			</ScrollViewer>
 		</StackPanel>
 
