--- a/DevilDaggersAssetEditor.Wpf/Gui/Windows/ModManager.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/Windows/ModManager.xaml
@@ -7,8 +7,8 @@
 		mc:Ignorable="d"
         Title="Mod manager" WindowStartupLocation="CenterScreen" Closed="Window_Closed">
 	<ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
-		<StackPanel MinHeight="730" MinWidth="1366" Background="{StaticResource Gray3}">
-			<TabControl Name="TabControl">
+		<StackPanel MinHeight="730" MinWidth="1366">
+			<TabControl Name="TabControl" BorderThickness="0">
 				<TabItem Header="Download mods" Name="DownloadModsTabItem" />
 				<TabItem Header="Manage mods">
 					<usercontrols:ManageModsControl x:Name="ManageModsControl" />
