--- a/DevilDaggersAssetEditor.Wpf/Gui/Windows/MakeBinaries.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/Windows/MakeBinaries.xaml
@@ -13,9 +13,7 @@
 			</StackPanel>
 		</StackPanel>
 		<StackPanel Margin="6" Background="{StaticResource Gray3}">
-			<StackPanel Style="{StaticResource PaddingStackPanel}">
-				<Button Name="ButtonMakeBinaries" Content="Make binaries" Click="MakeBinaries_Click" Style="{StaticResource OkButtonLarge}" />
-			</StackPanel>
+			<Button Name="ButtonMakeBinaries" Content="Make binaries" Click="MakeBinaries_Click" Style="{StaticResource OkButtonLarge}" Margin="12" />
 		</StackPanel>
 	</StackPanel>
 </Window>
