--- a/DevilDaggersAssetEditor.Wpf/Gui/Windows/TrimBinary.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/Windows/TrimBinary.xaml
@@ -47,9 +47,7 @@
 			</StackPanel>
 		</StackPanel>
 		<StackPanel Margin="6" Background="{StaticResource Gray3}">
-			<StackPanel Style="{StaticResource PaddingStackPanel}">
-				<Button Name="ButtonTrimBinary" Content="Trim binary" Click="TrimBinary_Click" Style="{StaticResource OkButtonLarge}" />
-			</StackPanel>
+			<Button Name="ButtonTrimBinary" Content="Trim binary" Click="TrimBinary_Click" Style="{StaticResource OkButtonLarge}" Margin="12" />
 			<Grid>
 				<ProgressBar Name="ProgressBar" />
 				<TextBlock Name="ProgressDescription" Style="{StaticResource ProgressBarTextBlock}" />
