--- a/DevilDaggersAssetEditor.Wpf/Gui/Windows/ExtractBinaries.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/Windows/ExtractBinaries.xaml
@@ -20,6 +20,19 @@
 			</StackPanel>
 		</StackPanel>
 		<StackPanel Margin="6" Background="{StaticResource Gray3}">
+			<StackPanel Style="{StaticResource PaddingStackPanel}">
+				<Label>Mod file path (optional)</Label>
+				<Grid>
+					<Grid.ColumnDefinitions>
+						<ColumnDefinition />
+						<ColumnDefinition Width="5*" />
+					</Grid.ColumnDefinitions>
+					<Button Content="Browse" Click="BrowseModFilePathButton_Click" HorizontalAlignment="Stretch" />
+					<TextBox Grid.Column="1" Name="TextBoxModFilePath" TextChanged="TextBoxModFilePath_TextChanged" />
+				</Grid>
+			</StackPanel>
+		</StackPanel>
+		<StackPanel Margin="6" Background="{StaticResource Gray3}">
 			<Button Name="ButtonExtractBinaries" Content="Extract binaries" Click="ExtractBinaries_Click" Style="{StaticResource OkButtonLarge}" Margin="12" />
 		</StackPanel>
 	</StackPanel>
